# flask-react

./: .gitignore  README.md  package-lock.json  package.json
api_server_flask/: .env  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
api_server_flask/api/: __init__.py  config.py  exceptions.py  models.py  site.db  site_dev.db  site_test.db
api_server_flask/api/api_score_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
api_server_flask/api/auth/: business.py  decorators.py  dto.py  routes.py
api_server_flask/api/groups/: routes.py
api_server_flask/api/models/: activity.py  activity_sub_type.py  activity_type.py  attendance.py  attendance_grade.py  attendance_type.py  black_listed_token.py  grade.py  grade_users.py  group.py  lab.py  labs_grade.py  rate_activity.py  role.py  subject.py  type_grade.py  user.py  util.py
api_server_flask/api/roles/: business.py  dto.py  routes.py
api_server_flask/api/subjects/: dto.py  routes.py
api_server_flask/migrations/versions/: 004ff5a83d08_attendance_attendance_type_attendance_.py  07b2ea541264_adding_activity_s_tables.py  08f1c418a206_add_tables_for_labs.py  1a1ed2a7f63c_add_table_subject.py  94d17cc8ee11_add_table_group.py  b35eec6882bd_add_tables_for_grade.py  (+2 more)
api_server_flask/tests/: conftest.py  test_auth_login.py  test_auth_logout.py  test_auth_user.py  test_config.py  test_create_role.py  test_delete_role.py  test_retrieve_role.py  test_update_role.py  util.py
api_server_flask/util/: check_role.py  covert_model.py  datetime_util.py  schema_load.py
(+186 files in other folders)
