[tool.black]
line-length = 89
target-version = ['py310']
include = '\.pyi?$'
exclude =  '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.vscode
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | venv
)/
'''
[build-system]
requires = [
    "setuptools >= 43.0.0",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"